# OSBot-LLMs

./: .gitignore  .gitmodules  README.md  package.json  pyproject.toml  requirements-test.txt  requirements.txt  server.py  server__fastapi__llms.py  setup.py  start-local-server.sh  wallaby-jasmine-2.js  wallaby-qunit.js
.github/workflows/: ci-pipeline__dev.yml  increment-tag-main.yml  run-unit-tests.yml
_to_delete/: main.py  setup.py  wallaby-qunit.js
_to_delete/code/: Config.py
deploy/lambdas/: Deploy_Lambda__OSBot_LLMs.py  test_Deploy_Lambda__OSBot_LLMs.py
osbot_llms/: An_Class.py  Config.py  OSBot_LLMs__Server_Config.py  OSBot_LLMs__Shared_Objects.py  test__chained_fast_api.py
osbot_llms/fast_api/: Fast_API_Route.py  Fast_API__LLMs.py  LLMs__Fast_API.py
osbot_llms/fastapi/: FastAPI_LLMs.py  FastAPI_Route.py  FastAPI_Utils.py
osbot_llms/lambdas/: handler.py
osbot_llms/llms/: API_Perplexity.py
osbot_llms/models/: GPT_Audio_To_Text.py  GPT_History.py  GPT_Prompt_Simple.py  GPT_Prompt_With_System.py  GPT_Prompt_With_System_And_History.py  GPT_Text_To_Audio.py  LLMs__Chat_Completion.py
osbot_llms/open_ai/: API_Open_AI.py
osbot_llms/testing/: TestCase__S3_Minio__Temp_Chat_Threads.py  TestCase__S3_Minio__Temp_S3_Bucket.py
osbot_llms/utils/: Version.py
osbot_llms/web_static/: chat-ui-v2.html  chat.js  index.html
tests/: llm_fast_api__for_tests.py  test_An_Class.py  test_Config.py  test_setup.py
tests/_experiments/: test_chat_gpt_threads.py
tests/fast_api/: test_LLMs__Fast_API.py
tests/fastapi/: test_FastAPI_LLMs.py
tests/qa/: test_Live_Server.py
(+258 files in other folders)
