# poetry install didn't work because of pendulum (which is a dependency of prefect)
# pip install prefect did work
[tool.poetry]
name        = "osbot_llms"
version     = "v0.2.9"
description = "OWASP Security Bot - LLM"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/owasp-sbot/OSBot-LLMs"
repository  = "https://github.com/owasp-sbot/OSBot-LLMs"

[tool.poetry.dependencies]
python          = "^3.11"
osbot-aws       = "*"
osbot-fast-api  = "*"
mangum          = "*"
uvicorn         = "*"
httpx           = "*"
openai          = "*"
numpy           = "*"       # this adds 40Mbs of dependencies (and it is only used at the moment in the RAG experiment in RAG__DB__Sqlite)


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
